--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       rel="shortcut icon"
-      href="/public/images/favicon.ico"
+      href="./public/images/favicon.ico"
       type="image/x-icon"
     />
     <link
