--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="left-side">
               <img
                 class="logo"
-                src="/public/images/landing-logo.svg"
+                src="./public/images/landing-logo.svg"
                 alt="Company logo"
               />
               <nav class="primary-nav">
@@ -35,7 +35,7 @@
                   </li>
                   <li class="primary-li">
                     <img
-                      src="/public/images/landing-vector-17.svg"
+                      src="./public/images/landing-vector-17.svg"
                       alt="Divider"
                     />
                   </li>
@@ -44,7 +44,7 @@
                   </li>
                   <li class="primary-li">
                     <img
-                      src="/public/images/landing-vector-17.svg"
+                      src="./public/images/landing-vector-17.svg"
                       alt="Divider"
                     />
                   </li>
@@ -53,7 +53,7 @@
                   </li>
                   <li class="primary-li">
                     <img
-                      src="/public/images/landing-vector-17.svg"
+                      src="./public/images/landing-vector-17.svg"
                       alt="Divider"
                     />
                   </li>
@@ -62,7 +62,7 @@
                   </li>
                   <li class="primary-li">
                     <img
-                      src="/public/images/landing-vector-17.svg"
+                      src="./public/images/landing-vector-17.svg"
                       alt="Divider"
                     />
                   </li>
@@ -70,7 +70,7 @@
                     <a class="link" href="#english">Eng </a>
                     <button class="arrow-down">
                       <img
-                        src="/public/images/landing-icon-arrow-down.svg"
+                        src="./public/images/landing-icon-arrow-down.svg"
                         alt="Arrow down icon"
                       />
                     </button>
@@ -86,7 +86,7 @@
               />
               <button class="search-btn">
                 <img
-                  src="/public/images/landing-icon-search.svg"
+                  src="./public/images/landing-icon-search.svg"
                   alt="Search icon"
                 />
               </button>
@@ -181,7 +181,7 @@
                   <div class="contact">
                     <img
                       class="contact-icon"
-                      src="/public/images/el_phone-alt.svg"
+                      src="./public/images/el_phone-alt.svg"
                       alt="Phone logo"
                     />
                     <a href="tel:+380931532456" target="_blank"
@@ -191,7 +191,7 @@
                   <div class="contact">
                     <img
                       class="contact-icon"
-                      src="/public/images/Email-icon.svg"
+                      src="./public/images/Email-icon.svg"
                       alt="Email logo"
                     />
                     <a href="mailto:example@gmail.com" target="”_blank”"
@@ -201,7 +201,7 @@
                   <div class="contact">
                     <img
                       class="contact-icon"
-                      src="/public/images/Location-icon.svg"
+                      src="./public/images/Location-icon.svg"
                       alt="Location logo"
                     />
                     <a
@@ -216,19 +216,19 @@
                 <a href="https://www.facebook.com/" target="_blank"
                   ><img
                     class="sm-logo"
-                    src="/public/images/landing-bi-facebook.svg"
+                    src="./public/images/landing-bi-facebook.svg"
                     alt="facebook logo"
                 /></a>
                 <a href="https://www.linkedin.com/" target="_blank"
                   ><img
                     class="sm-logo"
-                    src="/public/images/entypo-social_linkedin-with-circle.svg"
+                    src="./public/images/entypo-social_linkedin-with-circle.svg"
                     alt="LinkedIn logo"
                 /></a>
                 <a href="https://www.instagram.com/" target="_blank"
                   ><img
                     class="sm-logo"
-                    src="/public/images/mage_instagram-circle.svg"
+                    src="./public/images/mage_instagram-circle.svg"
                     alt="Instagram logo"
                 /></a>
               </div>
@@ -285,7 +285,7 @@
                       <span class="country-code">+380</span>
                       <img
                         class="country-code-arrow-down-icon"
-                        src="/public/images/landing-imput-icon-arrow-down.svg"
+                        src="./public/images/landing-imput-icon-arrow-down.svg"
                         alt="Arrow down"
                       />
                       <span class="country-code-divider">|</span>
@@ -303,12 +303,12 @@
                     />
                     <img
                       class="radio-input-unchecked"
-                      src="/public/images/landing-base-base-radio.svg"
+                      src="./public/images/landing-base-base-radio.svg"
                       alt="Radio button unchecked"
                     />
                     <img
                       class="radio-input-checked hidden"
-                      src="/public/images/landing-base-base-radio-checked.svg"
+                      src="./public/images/landing-base-base-radio-checked.svg"
                       alt="Radio button checked"
                     />
                     <label class="radio-label" for="ui">UI Developer</label>
@@ -324,12 +324,12 @@
                     />
                     <img
                       class="radio-input-unchecked"
-                      src="/public/images/landing-base-base-radio.svg"
+                      src="./public/images/landing-base-base-radio.svg"
                       alt="Radio button unchecked"
                     />
                     <img
                       class="radio-input-checked hidden"
-                      src="/public/images/landing-base-base-radio-checked.svg"
+                      src="./public/images/landing-base-base-radio-checked.svg"
                       alt="Radio button checked"
                     />
                     <label class="radio-label" for="ui/ux"
@@ -347,12 +347,12 @@
                     />
                     <img
                       class="radio-input-unchecked"
-                      src="/public/images/landing-base-base-radio.svg"
+                      src="./public/images/landing-base-base-radio.svg"
                       alt="Radio button unchecked"
                     />
                     <img
                       class="radio-input-checked hidden"
-                      src="/public/images/landing-base-base-radio-checked.svg"
+                      src="./public/images/landing-base-base-radio-checked.svg"
                       alt="Radio button checked"
                     />
                     <label class="radio-label" for="ae"
@@ -370,12 +370,12 @@
                     />
                     <img
                       class="radio-input-unchecked"
-                      src="/public/images/landing-base-base-radio.svg"
+                      src="./public/images/landing-base-base-radio.svg"
                       alt="Radio button unchecked"
                     />
                     <img
                       class="radio-input-checked hidden"
-                      src="/public/images/landing-base-base-radio-checked.svg"
+                      src="./public/images/landing-base-base-radio-checked.svg"
                       alt="Radio button checked"
                     />
                     <label class="radio-label" for="qa">UQA Engineer</label>
@@ -391,12 +391,12 @@
                     />
                     <img
                       class="radio-input-unchecked"
-                      src="/public/images/landing-base-base-radio.svg"
+                      src="./public/images/landing-base-base-radio.svg"
                       alt="Radio button unchecked"
                     />
                     <img
                       class="radio-input-checked hidden"
-                      src="/public/images/landing-base-base-radio-checked.svg"
+                      src="./public/images/landing-base-base-radio-checked.svg"
                       alt="Radio button checked"
                     />
                     <label class="radio-label" for="other">Other</label>
@@ -424,12 +424,12 @@
                     />
                     <img
                       class="checkbox-checked hidden"
-                      src="/public/images/landing-checkbox.svg"
+                      src="./public/images/landing-checkbox.svg"
                       alt="Checkbox checked"
                     />
                     <img
                       class="checkbox-unchecked"
-                      src="/public/images/landing-checkbox-unchecked.svg"
+                      src="./public/images/landing-checkbox-unchecked.svg"
                       alt="Checkbox unchecked"
                     />
                     <label class="checkbox-label" for="terms1"
@@ -445,12 +445,12 @@
                     />
                     <img
                       class="checkbox-checked hidden"
-                      src="/public/images/landing-checkbox.svg"
+                      src="./public/images/landing-checkbox.svg"
                       alt="Checkbox checked"
                     />
                     <img
                       class="checkbox-unchecked"
-                      src="/public/images/landing-checkbox-unchecked.svg"
+                      src="./public/images/landing-checkbox-unchecked.svg"
                       alt="Checkbox unchecked"
                     />
                     <label class="checkbox-label" for="terms2"
@@ -521,9 +521,9 @@
                 </div>
 
                 <div class="payment-gateways">
-                  <img src="/public/images/visa.svg" alt="Visa logo" />
+                  <img src="./public/images/visa.svg" alt="Visa logo" />
                   <img
-                    src="/public/images/mastercard.svg"
+                    src="./public/images/mastercard.svg"
                     alt="Mastercard logo"
                   />
                 </div>
