Changed alt text

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <img
                 class="logo"
                 src="./public/images/landing-logo.svg"
-                alt="Company logo"
+                alt="PlantMe company logo"
               />
               <nav class="primary-nav">
                 <ul class="primary-ul">
@@ -36,7 +36,7 @@
                   <li class="primary-li">
                     <img
                       src="./public/images/landing-vector-17.svg"
-                      alt="Divider"
+                      alt="Vertical divider line"
                     />
                   </li>
                   <li class="primary-li">
@@ -45,7 +45,7 @@
                   <li class="primary-li">
                     <img
                       src="./public/images/landing-vector-17.svg"
-                      alt="Divider"
+                      alt="Vertical divider line"
                     />
                   </li>
                   <li class="primary-li">
@@ -54,7 +54,7 @@
                   <li class="primary-li">
                     <img
                       src="./public/images/landing-vector-17.svg"
-                      alt="Divider"
+                      alt="Vertical divider line"
                     />
                   </li>
                   <li class="primary-li">
@@ -63,7 +63,7 @@
                   <li class="primary-li">
                     <img
                       src="./public/images/landing-vector-17.svg"
-                      alt="Divider"
+                      alt="Vertical divider line"
                     />
                   </li>
                   <li class="primary-li">
@@ -182,7 +182,7 @@
                     <img
                       class="contact-icon"
                       src="./public/images/el_phone-alt.svg"
-                      alt="Phone logo"
+                      alt="Phone icon"
                     />
                     <a href="tel:+380931532456" target="_blank"
                       ><p class="contact-data">+380 93 15 32 456</p></a
@@ -192,7 +192,7 @@
                     <img
                       class="contact-icon"
                       src="./public/images/Email-icon.svg"
-                      alt="Email logo"
+                      alt="Email icon"
                     />
                     <a href="mailto:example@gmail.com" target="”_blank”"
                       ><p class="contact-data">example@gmail.com</p></a
@@ -202,7 +202,7 @@
                     <img
                       class="contact-icon"
                       src="./public/images/Location-icon.svg"
-                      alt="Location logo"
+                      alt="Location pin icon"
                     />
                     <a
                       href="https://maps.app.goo.gl/uiU9FcWK4SjVp9C66"
@@ -286,7 +286,7 @@
                       <img
                         class="country-code-arrow-down-icon"
                         src="./public/images/landing-imput-icon-arrow-down.svg"
-                        alt="Arrow down"
+                        alt="Arrow down icon"
                       />
                       <span class="country-code-divider">|</span>
                     </div>
