--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                 method="POST"
                 class="contact-form"
                 role="form"
-                aria-labelledby="form"
+                aria-label="form"
               >
                 <div class="contact-row">
                   <div class="form-input-group">
@@ -378,10 +378,6 @@
                     </div>
                   </div>
                 </div>
-
-                <fieldset>
-                  <legend>Select an option</legend>
-                </fieldset>
 
                 <div class="radio-group">
                   <div class="radio-option">
